--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng="myApp">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="vendors/angular.js"></script>
+    <script src="vendors/angular-route.js"></script>
+    <script src="scripts/client.js"></script>
     <title>Document</title>
 
 </head>
 <body>
     
     <h1>HI!</h1>
+    <nav>
+        <a href="/#!home">Home</a>
+        <a href="/#!add">Add Employee</a>
+        <a href="/#!Track">Track Employees</a>
+        <a href="/#!Reports">Reports</a>
+    </nav>
+    <main ng-view>
 
+    </main>
 </body>
 </html>
