--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng="myApp">
+<html lang="en" ng-app="myApp">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,7 @@
     <script src="vendors/angular.js"></script>
     <script src="vendors/angular-route.js"></script>
     <script src="scripts/client.js"></script>
+    <script src="scripts/controllers/add.controller.js"></script>
     <title>Document</title>
 
 </head>
@@ -14,10 +15,10 @@
     
     <h1>HI!</h1>
     <nav>
-        <a href="/#!home">Home</a>
+        <a href="/#!">Home</a>
         <a href="/#!add">Add Employee</a>
-        <a href="/#!Track">Track Employees</a>
-        <a href="/#!Reports">Reports</a>
+        <a href="/#!track">Track Employees</a>
+        <a href="/#!reports">Reports</a>
     </nav>
     <main ng-view>
 
