--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Angular JS -->
     <script src="vendors/angular.js"></script>
     <script src="vendors/angular-route.js"></script>
+
+    <!-- Client JS -->
     <script src="scripts/client.js"></script>
     <script src="scripts/controllers/add.controller.js"></script>
+    <script src="scripts/services/employees.service.js"></script>
     <title>Document</title>
+
 </head>
 <body>
     
