--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,6 +11,7 @@
     <!-- Client JS -->
     <script src="scripts/client.js"></script>
     <script src="scripts/controllers/add.controller.js"></script>
+    <script src="scripts/controllers/track.controller.js"></script>
     <script src="scripts/services/employees.service.js"></script>
     <title>Document</title>
 
